@@ -1,6 +1,7 @@
 package com.sisrest.services.convertes;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,21 +14,21 @@ import com.sisrest.model.entities.Beneficiario;
 @Service
 public class BeneficiarioServiceConvert {
 
-	@Autowired
-	private ModelMapper mapper;
+    @Autowired
+    private ModelMapper mapper;
 
-	public List<BeneficiarioResponse> beneficiariosToResponses(List<Beneficiario> beneficiarios) {
-		return beneficiarios.stream().map(this::beneficiarioToDTO).toList();
-	}
+    public List<BeneficiarioResponse> beneficiariosToResponses(List<Beneficiario> beneficiarios) {
+        return beneficiarios.stream().map(this::beneficiarioToDTO).collect(Collectors.toList());
+    }
 
-	public Beneficiario dtoToBeneficiario(BeneficiarioRequest dto) {
-		Beneficiario beneficiario = mapper.map(dto, Beneficiario.class);
-		return beneficiario;
-	}
+    public Beneficiario dtoToBeneficiario(BeneficiarioRequest dto) {
+        Beneficiario beneficiario = mapper.map(dto, Beneficiario.class);
+        return beneficiario;
+    }
 
-	public BeneficiarioResponse beneficiarioToDTO(Beneficiario beneficiario) {
-		BeneficiarioResponse response = mapper.map(beneficiario, BeneficiarioResponse.class);
-		return response;
-	}
+    public BeneficiarioResponse beneficiarioToDTO(Beneficiario beneficiario) {
+        BeneficiarioResponse response = mapper.map(beneficiario, BeneficiarioResponse.class);
+        return response;
+    }
 
 }
