@@ -1,6 +1,7 @@
 package com.sisrest.services.convertes;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,20 +14,20 @@ import com.sisrest.model.entities.Edital;
 @Service
 public class EditalServiceConvert {
 
-	@Autowired
-	private ModelMapper mapper;
+    @Autowired
+    private ModelMapper mapper;
 
-	public List<EditalResponse> editaisToResponses(List<Edital> editais) {
-		return editais.stream().map(this::editalToDTO).toList();
-	}
+    public List<EditalResponse> editaisToResponses(List<Edital> editais) {
+        return editais.stream().map(this::editalToDTO).collect(Collectors.toList());
+    }
 
-	public Edital dtoToEdital(EditalRequest dto) {
-		Edital edital = mapper.map(dto, Edital.class);
-		return edital;
-	}
+    public Edital dtoToEdital(EditalRequest dto) {
+        Edital edital = mapper.map(dto, Edital.class);
+        return edital;
+    }
 
-	public EditalResponse editalToDTO(Edital edital) {
-		EditalResponse response = mapper.map(edital, EditalResponse.class);
-		return response;
-	}
+    public EditalResponse editalToDTO(Edital edital) {
+        EditalResponse response = mapper.map(edital, EditalResponse.class);
+        return response;
+    }
 }
