@@ -1,6 +1,7 @@
 package com.sisrest.services.convertes;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -13,21 +14,21 @@ import com.sisrest.model.entities.Inativacao;
 @Service
 public class InativacaoServiceConvert {
 
-	@Autowired
-	private ModelMapper mapper;
+    @Autowired
+    private ModelMapper mapper;
 
-	public List<InativacaoResponse> inativacoesToResponses(List<Inativacao> inativacoes) {
-		return inativacoes.stream().map(this::inativacaoToDTO).toList();
-	}
+    public List<InativacaoResponse> inativacoesToResponses(List<Inativacao> inativacoes) {
+        return inativacoes.stream().map(this::inativacaoToDTO).collect(Collectors.toList());
+    }
 
-	public Inativacao dtoToInativacao(InativacaoRequest dto) {
-		Inativacao inativacao = mapper.map(dto, Inativacao.class);
-		return inativacao;
-	}
+    public Inativacao dtoToInativacao(InativacaoRequest dto) {
+        Inativacao inativacao = mapper.map(dto, Inativacao.class);
+        return inativacao;
+    }
 
-	public InativacaoResponse inativacaoToDTO(Inativacao inativacao) {
-		InativacaoResponse response = mapper.map(inativacao, InativacaoResponse.class);
-		return response;
-	}
+    public InativacaoResponse inativacaoToDTO(Inativacao inativacao) {
+        InativacaoResponse response = mapper.map(inativacao, InativacaoResponse.class);
+        return response;
+    }
 
 }
